--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         >
       </div>
       <div>
-        <h1>もーやん(テスト中)</h1>
+        <h1>もーやん～テスト中</h1>
         <p>50代からプログラミングに挑戦中のコーダー見習いです</p>
         <ul>
           <a href="https://twitter.com/reloblog" target="_blank">
