--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>もーやんポートフォリオサイト(テスト)</title>
+  <title>もーやんポートフォリオサイト～構築中</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="">
   <link rel="icon" href="img/mow-favicon.png">
@@ -22,7 +22,7 @@
         >
       </div>
       <div>
-        <h1>もーやん～テスト中</h1>
+        <h1>もーやん～構築中</h1>
         <p>50代からプログラミングに挑戦中のコーダー見習いです</p>
         <ul>
           <a href="https://twitter.com/reloblog" target="_blank">
