--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
       <h1>これまでの制作実績</h1>
       <section>
         <img 
-          src="img/work1.png"
-          alt="障害者施設ＨＰ"
+          src="img/hero1.png"
+          alt="ECサイト"
           width="400px"
           height="225px">
-        <h2>障害者施設ＨＰ</h2>
-        <p>身体障害者ホームのＬＰ制作をしたものです！</p>
+        <h2>ECサイト</h2>
+        <p>家具・照明などの製品販売用のLP制作をしたものです！</p>
       </section>
-      <section>
+      <!-- <section>
         <img 
           src="img/work2.png"
           alt="宝探しゲーム"
@@ -55,8 +55,8 @@
           height="225px">
         <h2>宝探しゲーム</h2>
         <p>すごいゲームです！すごいゲームです！すごいゲームです！すごいゲームです！すごいゲームです！すごいゲームです！</p>
-      </section>
-      <section>
+      </section> -->
+      <!-- <section>
         <img
           src="img/work3.png"
           alt="神経衰弱"
@@ -64,7 +64,7 @@
           height="225px">
         <h2>神経衰弱</h2>
         <p>すごいゲームです！すごいゲームです！すごいゲームです！すごいゲームです！すごいゲームです！すごいゲームです！</p>
-      </section> 
+      </section>  -->
     </div>
   </main>
   <footer>
