--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>もーやんポートフォリオサイト～構築中</title>
+  <title>mowyan's portfolio</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="">
   <link rel="icon" href="img/mow-favicon.png">
@@ -38,7 +38,7 @@
   <main>
     <div class="container">
       <h1>これまでの制作実績</h1>
-      <section>
+      <section class="animate">
         <img 
           src="img/hero1.png"
           alt="ECサイト"
@@ -47,7 +47,7 @@
         <h2>ECサイト</h2>
         <p>家具・照明などの製品販売用のLP制作をしたものです！</p>
       </section>
-      <!-- <section>
+      <section class="animate">
         <img 
           src="img/work2.png"
           alt="宝探しゲーム"
@@ -55,8 +55,8 @@
           height="225px">
         <h2>宝探しゲーム</h2>
         <p>すごいゲームです！すごいゲームです！すごいゲームです！すごいゲームです！すごいゲームです！すごいゲームです！</p>
-      </section> -->
-      <!-- <section>
+      </section>
+      <section class="animate">
         <img
           src="img/work3.png"
           alt="神経衰弱"
@@ -64,7 +64,7 @@
           height="225px">
         <h2>神経衰弱</h2>
         <p>すごいゲームです！すごいゲームです！すごいゲームです！すごいゲームです！すごいゲームです！すごいゲームです！</p>
-      </section>  -->
+      </section> 
     </div>
   </main>
   <footer>
@@ -72,6 +72,6 @@
     
 
   </footer>
-  
+  <script src="js/main.js"></script>
 </body>
 </html>
